Fits: new '--skycoverage' option to report image WCS coverage
Until now it was inconvenient to calculate the the relative coverage of an
image in the sky: where is its center, how big is it (on the sky) and
etc. You had to read the image size, construct a set of 4 coordinates of
the sides of the image, then use 'asttable' and the column arithmetic
operator 'img-to-wcs'.

With this commit, this process is now formalized inside the Fits program
with the '--skycoverage' option which will return two basic ways to
simplify the coverage of the image over the celestial sphere.

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,13 @@ See the end of the file for license conditions.
          echo "113.64812416667 31.88732" \
               | asttable -c'arith $1 degree-to-ra $2 degree-to-dec'
 
+  Fits:
+   - New '--skycoverage' option will report the area of the input image in
+     RA/Dec, both in units of center/width, and box minimum/maximum
+     format. This is paritcularly useful in combination with the new
+     'astquery' option, to easily search the contents of external databases
+     within the image.
+
 ** Removed features
 
 ** Changed features
@@ -49,6 +56,7 @@ See the end of the file for license conditions.
 
 ** Bugs fixed
   bug #59105: Column arithmetic operator degree-to-ra, returning to dec
+
 
 
 
