Library (wcs.h): new function to return WCS dimension name
In some contexts, it is useful to report the name of given WCS
coordinates. With this commit, the new 'gal_wcs_dimension_name' will do the
job.

--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,9 @@ See the end of the file for license conditions.
      'astquery' option, to easily search the contents of external databases
      within the image.
 
+  Library:
+   - gal_wcs_dimension_name: return the name of the requested WCS dim.
+
 ** Removed features
 
 ** Changed features
