--- a/NEWS
+++ b/NEWS
@@ -58,8 +58,9 @@ See the end of the file for license conditions.
      'usecolon' is zero, the string will be in the '_d_m_s' format.
 
 ** Bugs fixed
-  bug #59105: Column arithmetic operator degree-to-ra, returning to dec
   bug #59017: Segment's object IDs are not thread-safe (i.e., reproducible).
+  bug #59105: Column arithmetic operator degree-to-ra, returning to dec.
+  bug #59136: Makeprofiles with --replace is not thread-safe.
 
 
 
