--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -17178,20 +17178,14 @@ See the explanations for this type of profile in @option{--fcol}.
 
 @item -R
 @itemx --replace
-Do not add the pixels of each profile over the background (possibly crowded by other profiles), replace them.
+Do not add the pixels of each profile over the background, or other profiles.
+But replace the values.
+
 By default, when two profiles overlap, the final pixel value is the sum of all the profiles that overlap on that pixel.
-When this option is given, the pixels are not added but replaced by the newer profile's pixel and any value under it is lost.
-
-@cindex CPU threads
-@cindex Threads, CPU
-When order matters, make sure to use this function with `@option{--numthreads=1}'.
-When multiple threads are used, the separate profiles are built asynchronously and not in order.
-Since order does not matter in an addition, this causes no problems by default but has to be considered when this option is given.
-Using multiple threads is no problem if the profiles are to be used as a mask with a blank or fixed value (see `@option{--mforflatpix}') since all their pixel values are the same.
-
-Note that only non-zero pixels are replaced.
-With radial profiles (for example S@'ersic or Moffat) only values above zero will be part of the profile.
-However, when using flat profiles with the `@option{--mforflatpix}' option, you should be careful not to give a @code{0.0} value as the flat profile's pixel value.
+This is the expected situation when dealing with physical object profiles like galaxies or stars/PSF.
+However, when MakeProfiles is used to build integer labeled images (for example in @ref{Aperture photometry}), this is not the expected situation: the sum of two labels will be a new label.
+With this option, the pixels are not added but the largest (maximum) value over that pixel is used.
+Because the maximum operator is independent of the order of values, the output is also thread-safe.
 
 @end table
 
