--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -380,6 +380,7 @@ Data containers
 * Sort FITS files by night::    Installed script to sort FITS files by obs night.
 * ConvertType::                 Convert data to various formats.
 * Table::                       Read and Write FITS tables to plain text.
+* Query::                       Import data from external databases.
 
 Fits
 
@@ -404,6 +405,10 @@ Table
 
 * Column arithmetic::           How to do operations on table columns.
 * Invoking asttable::           Options and arguments to Table.
+
+Query
+
+* Invoking astquery::           Inputs, outputs and configuration of Query.
 
 Data manipulation
 
@@ -568,7 +573,6 @@ Noise basics
 High-level calculations
 
 * CosmicCalculator::            Calculate cosmological variables
-* Query::                       Import data from external databases
 
 CosmicCalculator
 
@@ -581,10 +585,6 @@ Invoking CosmicCalculator
 * CosmicCalculator input options::  Options to specify input conditions.
 * CosmicCalculator basic cosmology calculations::  Like distance modulus, distances and etc.
 * CosmicCalculator spectral line calculations::  How they get affected by redshift.
-
-Query
-
-* Invoking astquery::           Inputs, outputs and configuration of Query.
 
 Library
 
@@ -8126,6 +8126,7 @@ It can be used to select certain table columns in a FITS table and see them as a
 * Sort FITS files by night::    Installed script to sort FITS files by obs night.
 * ConvertType::                 Convert data to various formats.
 * Table::                       Read and Write FITS tables to plain text.
+* Query::                       Import data from external databases.
 @end menu
 
 
@@ -9395,7 +9396,7 @@ Note that this behavior is ideal for gray-scale images, if you want a color imag
 
 @end table
 
-@node Table,  , ConvertType, Data containers
+@node Table, Query, ConvertType, Data containers
 @section Table
 
 Tables are the products of processing astronomical images and spectra.
@@ -9923,6 +9924,188 @@ Recall that when a name is given, this option will update the metadata of the fi
 Finally, if you already have a FITS table by other means (for example by downloading) and you merely want to update the column metadata and leave the data intact, it is much more efficient to directly modify the respective FITS header keywords with @code{astfits}, using the keyword manipulation features described in @ref{Keyword manipulation}.
 @option{--colmetadata} is mainly intended for scenarios where you want to edit the data so it will always load the full/partial dataset into memory, then write out the resulting datasets with updated/corrected metadata.
 @end table
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@node Query,  , Table, Data containers
+@section Query
+
+@cindex Query
+There are many astronomical databases available for downloading astronomical data.
+Each has its own interface, which is usually very well documented in their own webpages.
+However, remembering the exact URLs and interface of each database is not easily possible and using the graphic web interface (which is commonly easier to use), is not an automatic process.
+
+Gnuastro's Query program is designed to address these problems: it has a common high-level interface for general operations that are common between its recognized databases.
+For example, importing a catalog of objects within a certain distance of a given coordinate.
+
+@menu
+* Invoking astquery::           Inputs, outputs and configuration of Query.
+@end menu
+
+@node Invoking astquery,  , Query, Query
+@subsection Invoking Query
+
+Query provides a high-level interface to downloading subsets of data from databases.
+The executable name is @file{astquery} with the following general template
+
+@example
+$ astquery [OPTION...] ...
+@end example
+
+@noindent
+One line examples:
+
+@example
+## Import all the columns of all entries in the Gaia DR2 catalog within
+## 20 arc-minutes of the given coordinate.
+$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
+           --center=113.8729761,31.9027152 --radius=20/60
+
+## Similar to above, but return all objects within a square box of
+## 30 arcminutes (can also be rectangular, see '--width').
+$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
+           --center=113.8729761,31.9027152 --width=30/60
+
+## Similar to above, but for objects with magnitude range 10 to 15
+$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
+           --center=113.8729761,31.9027152 --width=30/60 \
+           --range=phot_g_mean_mag,10:15
+
+## Similar to first example, but only import the ID, RA, Dec and G-band
+## magnitude of the sources (not all the columns).
+$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
+           --center=113.8729761,31.9027152 --radius=0.1 \
+           --column=source_id,ra,dec,phot_g_mean_mag
+
+## Use a custom query to extract entries in the Gaia DR2 catalog.
+## The 'XXXX YYYY' can be a query of any size on the command-line.
+$ astquery --database=gaia --query="XXXX YYYY" --output=my-gaia.fits
+@end example
+
+Query doesn't take any input argument, because the main goal is to retreive data from external sources.
+The main input to Query is the @option{--database} option which specifies which database should be contacted for submitting the query.
+The name of the downloaded output file can optionally be set with @option{--output}.
+If @option{--output} is not set, an automatically generated name will be used.
+
+There are two methods to query the database: 1) with @option{--query} you can directly give a raw query statement that is recognized by the database, 2) with the @option{--center} and @option{--radius}, the low-level query will constructed automatically for the particular database.
+The former is very low level and will require some knowledge of the database's query language, but of course, it is much more powerful.
+The latter is much more limited in terms of capabilities (the only constraint is the location of the objects compared to the given center), but doesn't require any knowledge of the database's query language.
+
+@cartouche
+@noindent
+@strong{Under development, request for feedback:} Query is a new member of the Gnuastro family of programs.
+It currently requires that the @command{curl} executable (for the cURL downloading program) to be present on the host and the number of databases it supports is still limited, see the list under the @option{--database} option below.
+More downloader tools, and databases will be added in the near future as it is used more often, so please don't hesitate to suggest any that you may need.
+@end cartouche
+
+@table @option
+
+@item -d STR
+@itemx --database=STR
+Identifer for the database for sending the query.
+The current list of databases are listed here:
+
+@table @code
+@item gaia
+@cindex Gaia catalog
+@cindex Catalog, Gaia
+The Gaia project (@url{https://www.cosmos.esa.int/web/gaia}) database which is a large collection of star positions on the celestial sphere, as well as peculiar velocities, paralloxes and magnitudes in some bands among many others.
+Besides scientific studies (like studying resolved stellar populations in the Galaxy and its halo), Gaia is also invaluable for raw data calibrations, like astrometry.
+The query given to this database will be submitted to @code{https://gea.esac.esa.int/tap-server/tap/sync}.
+@end table
+
+@item -Q "STR"
+@itemx --query="STR"
+Directly specify the query to be passed onto the database.
+The queries will generally contain space and other meta-characters, so we recommend placing the query within quotations.
+
+@item -s STR
+@itemx --dataset=STR
+The dataset to query within the database for the automatically generated query (not compatible with @option{--query}).
+The reason for this is that many databases have different types of datasets, for example different data releases (DRs), or various high-level calculations on subsets of the database elements.
+For example when @option{--database=gaia}, you can set @option{--dataset=dr2} to only select objects within the second data release (DR2).
+
+You can either use the database's official name of the datasets, for example @code{gaiadr2.gaia_source} for the second data release of the Gaia database, or a simplified version that maps to it (@code{dr2}) for easy typing on the command-line.
+Below is a list of the simplified names for the databases that have them.
+
+@table @code
+@item gaia
+@itemize
+@item
+@code{dr2 --> gaiadr2.gaia_source}
+@item
+@code{dr2 --> gaiadr1.gaia_source}
+@item
+@code{tyco2 --> public.tyco2}
+@item
+@code{hipparcos --> public.hipparcos}
+@end itemize
+@end table
+
+@item -C FLT,FLT
+@itemx --center=FLT,FLT
+The center to use for the automatically generated query (not compatible with @option{--query}).
+All objects within a certain distance of the requested center position will be requested from the dataset.
+The distance can be specified with the @option{--radius} option.
+
+@item -r FLT
+@itemx --radius=FLT
+The radius about the requested center to use for the automatically generated query (not compatible with @option{--query}).
+The radius is in units of degrees, but you can use simple division with this option directly on the command-line.
+For example if you want a radius of 20 arc-minutes or 20 arc-seconds, you can use @option{--radius=20/60} or @option{--radius=20/3600} respectively (which is much more human-friendly than @code{0.3333} or @code{0.005556}).
+
+@item -w FLT[,FLT]
+@itemx --width=FLT[,FLT]
+The square (or rectangle) side length (width) about the requested center to use for the automatically generated query (not compatible with @option{--query}).
+If only one value is given to @code{--width} the region will be a square, but if two values are given, the widths of the query box along each dimension will be different.
+The value(s) is(are) in units of degrees, but you can use simple division for each value directly on the command-line, see the description of @option{--radius} for more on using division.
+
+@item -g STR,FLT,FLT
+@itemx --range=STR,FLT,FLT
+The column name and numerical range (inclusive) of acceptable values in that column (not compatible with @option{--query}).
+This option can be called multiple times for applying range limits on many columns in one call (thus greatly reducing the download size).
+For example @code{--range=phot_g_mean_mag,10:15} will only query for rows that have a value between 10 and 15 (inclusive) in the @code{phot_g_mean_mag} column (from the Gaia catalog).
+
+If you want the interval to not be inclusive on both sides, you can run @code{astquery} once and get the command that it executes.
+Then you can edit it to be non-inclusive on one side.
+
+@item -c STR
+@itemx --column=STR[,STR[,...]]
+The optional column name(s) to retrieve from the dataset in the automatically generated query (not compatible with @option{--query}).
+If not given, all the dataset's columns for the selected rows will be used (which can be large!).
+This option can take multiple values in one instance (for example @option{--column=ra,dec,mag}), or in multiple instances (for example @option{-cra -cdec -cmag}), or mixed (for example @option{-cra,dec -cmag}).
+
+In case, you don't know the full list of the dataset's column names, one solution is to run this program once without any @option{--column} and setting @option{--radius=0} (to have few, or no, rows and download fast).
+You can then inspect the column names with @ref{Table}.
+In case the database doesn't support a search radius of 0, or can't return a table with no rows, you can increase the radius.
+Here is an example on the Gaia DR2 catalog to show the full list of available columns:
+
+@example
+$ astquery --database=gaia --dataset=dr2 --center=0,0 \
+           --radius=0 --output=gaia-dr2-cols.fits
+$ asttable gaia-dr2-cols.fits --info
+@end example
+@end table
+
+
+
 
 
 
@@ -17705,10 +17888,9 @@ Even higher-level analysis is still needed to convert the observed magnitudes, s
 
 @menu
 * CosmicCalculator::            Calculate cosmological variables
-* Query::                       Import data from external databases
 @end menu
 
-@node CosmicCalculator, Query, High-level calculations, High-level calculations
+@node CosmicCalculator,  , High-level calculations, High-level calculations
 @section CosmicCalculator
 
 To derive higher-level information regarding our sources in extra-galactic astronomy, cosmological calculations are necessary.
@@ -18365,161 +18547,6 @@ To get the list of pre-defined names for the lines and their wavelength, you can
 In the former case (when a name is given), the returned number is in units of Angstroms.
 In the latter (when a number is given), the returned value is the same units of the input number (assuming its a wavelength).
 
-@end table
-
-
-
-
-
-
-
-
-
-
-
-@node Query,  , CosmicCalculator, High-level calculations
-@section Query
-
-There are many astronomical databases available for downloading astronomical data.
-Each has its own interface, which is usually very well documented in their own webpages.
-However, remembering the exact URLs and interface of each database is not easily possible and using the graphic web interface (which is commonly easier to use), is not an automatic process.
-
-Gnuastro's Query program is designed to address these problems: it has a common high-level interface for general operations that are common between its recognized databases.
-For example, importing a catalog of objects within a certain distance of a given coordinate.
-
-@menu
-* Invoking astquery::           Inputs, outputs and configuration of Query.
-@end menu
-
-@node Invoking astquery,  , Query, Query
-@subsection Invoking Query
-
-Query provides a high-level interface to downloading subsets of data from databases.
-The executable name is @file{astquery} with the following general template
-
-@example
-$ astquery [OPTION...] ...
-@end example
-
-@noindent
-One line examples:
-
-@example
-## Import all the columns of all entries in the Gaia DR2 catalog within
-## 20 arc-minutes of the given coordinate.
-$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
-           --center=113.8729761,31.9027152 --radius=20/60
-
-## Similar to above, but return all objects within a square box of
-## 30 arcminutes (can also be rectangular, see '--width').
-$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
-           --center=113.8729761,31.9027152 --width=30/60
-
-## Similar to first example, but only import the ID, RA, Dec and G-band
-## magnitude of the sources (not all the columns).
-$ astquery --database=gaia --dataset=dr2 --output=my-gaia.fits \
-           --center=113.8729761,31.9027152 --radius=0.1 \
-           --column=source_id,ra,dec,phot_g_mean_mag
-
-## Use a custom query to extract entries in the Gaia DR2 catalog.
-## The 'XXXX YYYY' can be a query of any size on the command-line.
-$ astquery --database=gaia --query="XXXX YYYY" --output=my-gaia.fits
-@end example
-
-Query doesn't take any input argument, because the main goal is to retreive data from external sources.
-The main input to Query is the @option{--database} option which specifies which database should be contacted for submitting the query.
-The name of the downloaded output file can optionally be set with @option{--output}.
-If @option{--output} is not set, an automatically generated name will be used.
-
-There are two methods to query the database: 1) with @option{--query} you can directly give a raw query statement that is recognized by the database, 2) with the @option{--center} and @option{--radius}, the low-level query will constructed automatically for the particular database.
-The former is very low level and will require some knowledge of the database's query language, but of course, it is much more powerful.
-The latter is much more limited in terms of capabilities (the only constraint is the location of the objects compared to the given center), but doesn't require any knowledge of the database's query language.
-
-@cartouche
-@noindent
-@strong{Under development, request for feedback:} Query is a new member of the Gnuastro family of programs.
-It currently requires that the @command{curl} executable (for the cURL downloading program) to be present on the host and the number of databases it supports is still limited, see the list under the @option{--database} option below.
-More downloader tools, and databases will be added in the near future as it is used more often, so please don't hesitate to suggest any that you may need.
-@end cartouche
-
-@table @option
-
-@item -d STR
-@itemx --database=STR
-Identifer for the database for sending the query.
-The current list of databases are listed here:
-
-@table @code
-@item gaia
-The Gaia project (@url{https://www.cosmos.esa.int/web/gaia}) database which is a large collection of star positions on the celestial sphere, as well as peculiar velocities, paralloxes and magnitudes in some bands among many others.
-Besides scientific studies (like studying resolved stellar populations in the Galaxy and its halo), Gaia is also invaluable for raw data calibrations, like astrometry.
-The query given to this database will be submitted to @code{https://gea.esac.esa.int/tap-server/tap/sync}.
-@end table
-
-@item -Q "STR"
-@itemx --query="STR"
-Directly specify the query to be passed onto the database.
-The queries will generally contain space and other meta-characters, so we recommend placing the query within quotations.
-
-@item -C FLT,FLT
-@itemx --center=FLT,FLT
-The center to use for the automatically generated query (not compatible with @option{--query}).
-All objects within a certain distance of the requested center position will be requested from the dataset.
-The distance can be specified with the @option{--radius} option.
-
-@item -r FLT
-@itemx --radius=FLT
-The radius about the requested center to use for the automatically generated query (not compatible with @option{--query}).
-The radius is in units of degrees, but you can use simple division with this option directly on the command-line.
-For example if you want a radius of 20 arc-minutes or 20 arc-seconds, you can use @option{--radius=20/60} or @option{--radius=20/3600} respectively (which is much more human-friendly than @code{0.3333} or @code{0.005556}).
-
-@item -w FLT[,FLT]
-@itemx --width=FLT[,FLT]
-The square (or rectangle) side length (width) about the requested center to use for the automatically generated query (not compatible with @option{--query}).
-If only one value is given to @code{--width} the region will be a square, but if two values are given, the widths of the query box along each dimension will be different.
-The value(s) is(are) in units of degrees, but you can use simple division for each value directly on the command-line, see the description of @option{--radius} for more on using division.
-
-
-
-@item -s STR
-@itemx --dataset=STR
-The dataset to query within the database for the automatically generated query (not compatible with @option{--query}).
-The reason for this is that many databases have different types of datasets, for example different data releases (DRs), or various high-level calculations on subsets of the database elements.
-For example when @option{--database=gaia}, you can set @option{--dataset=dr2} to only select objects within the second data release (DR2).
-
-You can either use the database's official name of the datasets, for example @code{gaiadr2.gaia_source} for the second data release of the Gaia database, or a simplified version that maps to it (@code{dr2}) for easy typing on the command-line.
-Below is a list of the simplified names for the databases that have them.
-
-@table @code
-@item gaia
-@itemize
-@item
-@code{dr2 --> gaiadr2.gaia_source}
-@item
-@code{dr2 --> gaiadr1.gaia_source}
-@item
-@code{tyco2 --> public.tyco2}
-@item
-@code{hipparcos --> public.hipparcos}
-@end itemize
-@end table
-
-@item -c STR
-@itemx --column=STR[,STR[,...]]
-The optional column name(s) to retrieve from the dataset in the automatically generated query (not compatible with @option{--query}).
-If not given, all the dataset's columns for the selected rows will be used (which can be large!).
-This option can take multiple values in one instance (for example @option{--column=ra,dec,mag}), or in multiple instances (for example @option{-cra -cdec -cmag}), or mixed (for example @option{-cra,dec -cmag}).
-
-In case, you don't know the full list of the dataset's column names, one solution is to run this program once without any @option{--column} and setting @option{--radius=0} (to have few, or no, rows and download fast).
-You can then inspect the column names with @ref{Table}.
-In case the database doesn't support a search radius of 0, or can't return a table with no rows, you can increase the radius.
-Here is an example on the Gaia DR2 catalog to show the full list of available columns:
-
-@example
-$ astquery --database=gaia --dataset=dr2 --center=0,0 \
-           --radius=0 --output=gaia-dr2-cols.fits
-$ asttable gaia-dr2-cols.fits --info
-@end example
 @end table
 
 
